代码优化 z3